update index file

--- a/UF_PORTFOLIO/index.html
+++ b/UF_PORTFOLIO/index.html
@@ -116,7 +116,6 @@
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
-	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Umar Farooq</a>
@@ -187,7 +186,7 @@
 
 						<br>
 						<br>
-			            <h2>I am Web Developer Code is Passion</h2>
+			            <h2>I am Web Developer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/umar-farooq-2b3a19280/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -213,7 +212,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -270,7 +269,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>"I am a skilled Web Developer with over 5 years of experience crafting innovative digital solutions.
+								<p>"I am a skilled Web Developer with over less than 1 year of experience crafting innovative digital solutions.
 									Proficient in utilizing data-driven insights to inform strategic decision-making processes.
 									Expertise lies in developing dynamic web applications using modern technologies and frameworks.
 									Strong background in project management and delivering user-centric experiences."</p>
@@ -292,7 +291,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="30">0</span> <span>+</span>
+									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/umar-farooq-2b3a19280/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -313,7 +312,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>"I am a skilled Web Developer with over 5 years of experience crafting innovative digital solutions.
+            <p>"I am a skilled Web Developer with over less than 1 year of experience crafting innovative digital solutions.
 				Proficient in utilizing data-driven insights to inform strategic decision-making processes.
 				Expertise lies in developing dynamic web applications using modern technologies and frameworks.
 				Strong background in project management and delivering user-centric experiences."</p>
@@ -532,7 +531,7 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/4C5cHMdZuCTk5FtT9" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
